# ndk-vscode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.sh  env.cmake
.github/workflows/: ci.yml
demo/: CMakeLists.txt  lib.cpp
